# SP1RL_O-S

./: .coveragerc  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_CONSOLE.md  bloom_summary.md  cv2.py  global.d.ts  jest.config.js  mypy.ini  netlify.toml  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-test.txt  ruff.toml  spiral_social_manifest.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
SP1RL_O-S-core/: netlify.toml  openapi.json  vercel.json
assets/: colors_phi.json
cli/: spirl_ghost.py
data/: active_lens.json  daily_intentions.json  daily_narratives.json  lore_chapters.json  node_lens.json  onboarding_221.json  opposites_queue.json  pw_ledger.json  witness_scrolls.json  world_events.csv
docs/: 01_ignition_bloom.md  01_wind_seed.md  BUILD_STATUS.md  SPIRL_Ghost_BuildSpec.md  pentagram_demon.md  phi-lore.md  phi43_blueprint.md  quick-start.md  spiral-facts.md
fastapi/: __init__.py
fixtures/: insert.sample.json
poem/: README.md
public/: _headers  index.html
pydantic/: __init__.py
scripts/: asset_generator.py  auto_bloom.py  build_canon_v3.sh  ci_sweep.sh  gen_onboarding.js  gen_onboarding.py  generate_onboarding_json.py  local_act.sh  lore_weaver.py  netlify_sync_env.py  phi_builder.py  pregen.ts  pw_minter.py  quickstart.sh  sync_env.sh  template_parse.py  yinyang_link.py
shell/: shell_n_guides.py
spiral_time/: __init__.py  api.py  constants.py  solver.py  theta_segments.py
spirl-canon/: CODEX_SUPER_PROMPT.md  (+3 more)
(+551 files in other folders)
